--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
+    "mysql2": "^3.9.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
