--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@nextui-org/button": "^2.0.31",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "mysql2": "^3.9.8",
     "next": "14.2.3",
     "react": "^18",
