--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "formidable": "^3.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.8",
     "next": "14.2.3",
@@ -20,13 +21,16 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18.3.3",
+    "@types/form-data": "^2.5.0",
+    "@types/formidable": "^3.4.5",
+    "@types/node": "20.14.2",
+    "@types/node-fetch": "^2.6.11",
+    "@types/react": "18.3.3",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   }
 }
