--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql2": "^3.10.1",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/form-data": "^2.5.0",
